# gantt_chart_rs

./: Cargo.toml  version.json5
example/: project.json5
src/: lib.rs  macros.rs  main.rs
src/render/: shapes.rs
