[package]
name = "gantt"
version = "1.0.0"
edition = "2021"
authors = ["John Lyon-Smith <john@lyon-smith.org>", "Veniamin Albaev <albenik@gmail.com>"]
readme = "README.md"
description = "A tool for generating Gantt charts"
repository = "https://github.com/albenik/gantt_chart_rs"
keywords = ["gantt", "chart", "project", "graphics", "svg"]
categories = ["command-line-utilities"]
license = "Unlicense"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
easy-error = "1"
json5 = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
svg = "0.16"

[[bin]]
name = "gantt"
path = "src/main.rs"
